# grafe-sim

./: .gitignore  README.md
GraphGrepSX/: GraphGrepSXConsole.cpp  ggsx  makefile
GraphGrepSX/GGSXLib/: GraphReaders.h  VF2GraphReaders.h
GraphGrepSX/vflib2/: Makefile
analysis/: Classification.ipynb  Codenet-Classification-Data-Harvesting.ipynb  gen-features-callgraph.py
analysis/data/: README.md
analysis/pysrc/: requirements_analysis.txt  test_utility.py  tox.ini  utility.py
llvmGrammars/: LLVMLexer.g4  LLVMParser.g4  README.md
llvmGrammars/.antlr/: LLVMLexer.interp  LLVMLexer.java  LLVMParser.interp  LLVMParser.java
llvmGrammars/java/: LLVMLexer.java  LLVMParser.java  LLVMParserBaseListener.java  LLVMParserListener.java
maps/: classes.csv  classes.html  map-nomap-0.csv  map-ref-1.csv  map-ref-loadstore-2.csv  map-ref-loadstore-phicall-3.csv  map-ref-more-detail-4.csv  map0.csv  map1.csv
py/: README-old.md  log.config  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
py/antlr_llvm_py/: LLVMLexer.interp  LLVMLexer.py  LLVMParser.interp  LLVMParser.py  LLVMParser.tokens  LLVMParserListener.py
py/src/ccpt/cfg_to_trie/: README.md  gencfg.py  gentrie.py  iv.py  iv_old.py  mv.py  runall.py  utils.py
py/src/ccpt/cfg_to_trie/antlr_llvm/: LLVMParserVisitor.py
py/src/ccpt/compare_tries/: README.md  compare.py  scores.csv
py/tests/: test_CLI.py  test_compare.py  test_iv.py  test_iv_old.py  test_trie_class.py  test_utils.py
py/tests/data/: a-cfg-sample.dot  cfg-sample.dot  ll-sample.ll  ll-two-function-sample.ll
(+3281 files in other folders)
