[options]

package_dir =
    = src
packages =
    ccpt
    ccpt.cfg_to_trie
    ccpt.compare_tries

[options.entry_points]
console_scripts =
    # cfg_to_trie (NB: preprocess will be removed.)
    genll = ccpt.cfg_to_trie.runall:preprocess_ll
    gencfg = ccpt.cfg_to_trie.gencfg:main
    gentrie = ccpt.cfg_to_trie.gentrie:main
    preprocess = ccpt.cfg_to_trie.runall:preprocess
    ivis = ccpt.cfg_to_trie.iv:main
    mvis = ccpt.cfg_to_trie.mv:main
    # cfg_to_trie all-in-one (NB: cfgtotrie-old will be removed.)
    cfgtotrie-old = ccpt.cfg_to_trie.runall:main
    cfgtotrie = ccpt.cfg_to_trie.runall:main_new
    # compare_tries
    cmptries = ccpt.compare_tries.compare:main

[tool:pytest]
addopts = --cov=src --cov-append -omit .
# -omit . should omit tests/ from coverage
# --cov-config=.coveragerc